update: adjust header spacing, pricing, contact info and add instructor name intro

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
   <header class="fixed w-full z-50 transition-all duration-300" id="header">
     <div class="glass-effect">
       <div class="container mx-auto flex items-center justify-between py-4 px-6">
-        <a href="#inicio" class="flex items-center space-x-3 group">
+        <a href="#inicio" class="flex items-center space-x-3 group mt-2">
           <div class="w-10 h-10 bg-orange-400 rounded-full flex items-center justify-center">
             <i class="fas fa-water text-white text-lg"></i>
           </div>
@@ -326,7 +326,7 @@
     <div class="absolute bottom-40 left-20 w-12 h-12 bg-white/10 rounded-full animate-float" style="animation-delay: 4s;"></div>
     
     <!-- Content -->
-    <div class="relative z-10 text-center text-white px-6">
+    <div class="relative z-10 text-center text-white px-6 pt-24">
       <h1 class="text-5xl md:text-7xl font-bold mb-6 leading-tight" data-aos="fade-up">
         Kitesurf, Surf<br>
         <span class="gradient-text">& Mamacocha</span>
@@ -358,7 +358,7 @@
       <div class="text-center mb-16" data-aos="fade-up">
         <h2 class="text-4xl font-bold mb-6 text-amber-600">Sobre Mí</h2>
         <p class="text-lg text-gray-600 max-w-2xl mx-auto">
-          Soy instructor certificado IKO con pasión por enseñar kitesurf en las mejores condiciones de viento de Tarifa.
+          Hola soy Santi, Soy instructor certificado IKO con pasión por enseñar kitesurf en las mejores condiciones de viento de Tarifa.
         </p>
       </div>
       
@@ -441,7 +441,7 @@
           <p class="text-gray-600 mb-6">
             Aprende o perfecciona tu técnica de kitesurf con el mejor instructor de Tarifa. Desde nivel básico hasta trucos avanzados.
           </p>
-          <div class="text-3xl font-bold text-amber-600 mb-2">€75</div>
+          <div class="text-3xl font-bold text-amber-600 mb-2">€140</div>
           <div class="text-gray-500 text-sm mb-6">2 horas / Material incluido</div>
           <a href="#contacto" class="bg-gradient-to-r from-amber-500 to-amber-600 hover:from-amber-600 hover:to-amber-700 text-white w-full py-3 rounded-lg font-medium transition-all">
             Reservar
@@ -473,7 +473,7 @@
           <p class="text-gray-600 mb-6">
             Descubre el deporte más innovador: wingfoil. Una experiencia única que combina viento, agua y la sensación de volar.
           </p>
-          <div class="text-3xl font-bold text-yellow-600 mb-2">€85</div>
+          <div class="text-3xl font-bold text-yellow-600 mb-2">€150</div>
           <div class="text-gray-500 text-sm mb-6">2 horas / Material incluido</div>
           <a href="#contacto" class="bg-gradient-to-r from-yellow-500 to-yellow-600 hover:from-yellow-600 hover:to-yellow-700 text-white w-full py-3 rounded-lg font-medium transition-all">
             Reservar
@@ -566,7 +566,7 @@
                 <i class="fas fa-phone text-2xl mt-1"></i>
                 <div>
                   <h4 class="font-semibold text-lg">Teléfono</h4>
-                  <p class="opacity-90">+34 600 123 456</p>
+                  <p class="opacity-90">+34 660 224 196</p>
                   <p class="text-sm opacity-75">Disponible 9:00 - 19:00</p>
                 </div>
               </div>
