feat: update contact links to direct WhatsApp and add real phone number

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
           <a href="tel:+34600123456" class="text-gray-600 hover:text-orange-600 transition-colors">
             <i class="fas fa-phone"></i>
           </a>
-          <a href="#reserva" class="btn-primary text-white px-6 py-3 rounded-full font-semibold">
+          <a href="https://wa.me/34660224196" target="_blank" class="btn-primary text-white px-6 py-3 rounded-full font-semibold">
             Reserva Ahora
           </a>
         </div>
@@ -307,7 +307,7 @@
           <a href="#servicios" class="text-gray-700 hover:text-orange-600 font-medium transition-colors">Clases</a>
           <a href="#testimonios" class="text-gray-700 hover:text-orange-600 font-medium transition-colors">Testimonios</a>
           <a href="#contacto" class="text-gray-700 hover:text-orange-600 font-medium transition-colors">Contacto</a>
-          <a href="#reserva" class="btn-primary text-white px-6 py-3 rounded-full font-semibold text-center mt-4">
+          <a href="https://wa.me/34660224196" target="_blank" class="btn-primary text-white px-6 py-3 rounded-full font-semibold text-center mt-4">
             Reserva Ahora
           </a>
         </nav>
@@ -335,7 +335,7 @@
         Instructor certificado IKO especializado en deportes acuáticos. Clases personalizadas de kitesurf, surf y wingfoil en Tarifa.
       </p>
       <div class="flex flex-col md:flex-row gap-4 justify-center" data-aos="fade-up" data-aos-delay="400">
-        <a href="#contacto" class="btn-primary px-8 py-4 rounded-full text-lg font-semibold hover:shadow-lg transition-all">
+        <a href="https://wa.me/34660224196" target="_blank" class="btn-primary px-8 py-4 rounded-full text-lg font-semibold hover:shadow-lg transition-all">
           Reservar Clase
         </a>
         <a href="#sobre" class="border-2 border-white text-white px-8 py-4 rounded-full text-lg font-semibold hover:bg-white hover:text-orange-600 transition-all">
@@ -443,7 +443,7 @@
           </p>
           <div class="text-3xl font-bold text-amber-600 mb-2">€140</div>
           <div class="text-gray-500 text-sm mb-6">2 horas / Material incluido</div>
-          <a href="#contacto" class="bg-gradient-to-r from-amber-500 to-amber-600 hover:from-amber-600 hover:to-amber-700 text-white w-full py-3 rounded-lg font-medium transition-all">
+          <a href="https://wa.me/34660224196" target="_blank" class="bg-gradient-to-r from-amber-500 to-amber-600 hover:from-amber-600 hover:to-amber-700 text-white w-full py-3 rounded-lg font-medium transition-all">
             Reservar
           </a>
         </div>
@@ -459,7 +459,7 @@
           </p>
           <div class="text-3xl font-bold text-orange-600 mb-2">€65</div>
           <div class="text-gray-500 text-sm mb-6">2 horas / Material incluido</div>
-          <a href="#contacto" class="bg-gradient-to-r from-orange-500 to-orange-600 hover:from-orange-600 hover:to-orange-700 text-white w-full py-3 rounded-lg font-medium transition-all">
+          <a href="https://wa.me/34660224196" target="_blank" class="bg-gradient-to-r from-orange-500 to-orange-600 hover:from-orange-600 hover:to-orange-700 text-white w-full py-3 rounded-lg font-medium transition-all">
             Reservar
           </a>
         </div>
@@ -475,7 +475,7 @@
           </p>
           <div class="text-3xl font-bold text-yellow-600 mb-2">€150</div>
           <div class="text-gray-500 text-sm mb-6">2 horas / Material incluido</div>
-          <a href="#contacto" class="bg-gradient-to-r from-yellow-500 to-yellow-600 hover:from-yellow-600 hover:to-yellow-700 text-white w-full py-3 rounded-lg font-medium transition-all">
+          <a href="https://wa.me/34660224196" target="_blank" class="bg-gradient-to-r from-yellow-500 to-yellow-600 hover:from-yellow-600 hover:to-yellow-700 text-white w-full py-3 rounded-lg font-medium transition-all">
             Reservar
           </a>
         </div>
@@ -597,7 +597,7 @@
               <a href="#" class="text-orange-600 hover:text-orange-700 transition-colors text-2xl">
                 <i class="fab fa-instagram"></i>
               </a>
-              <a href="#" class="text-orange-600 hover:text-orange-700 transition-colors text-2xl">
+              <a href="https://wa.me/34660224196" target="_blank" class="text-orange-600 hover:text-orange-700 transition-colors text-2xl">
                 <i class="fab fa-whatsapp"></i>
               </a>
               <a href="#" class="text-orange-600 hover:text-orange-700 transition-colors text-2xl">
@@ -644,7 +644,7 @@
         <div>
           <h4 class="text-lg font-semibold mb-4">Contacto</h4>
           <div class="space-y-2 text-amber-100">
-            <p><i class="fas fa-phone mr-2"></i> +34 123 456 789</p>
+            <p><i class="fas fa-phone mr-2"></i> +34 660 224 196</p>
             <p><i class="fas fa-envelope mr-2"></i> info@mamacochatarifakitesurf.com</p>
             <p><i class="fas fa-map-marker-alt mr-2"></i> Tarifa, Cádiz, España</p>
           </div>
